# mcp-skeleton

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  TEMPLATE_USAGE.md  docker-compose.yml  entrypoint.sh  example_usage.py  mcp_server.py  pyproject.toml  requirements.txt  tools.py
tests/: __init__.py  conftest.py  test_calculator_tools.py  test_text_tools.py  test_weather_tools.py
tools/: __init__.py  calculator_tools.py  http_tools.py  text_tools.py  weather_tools.py
utilities/: __init__.py  base_tools.py  config.py
