[tool.poetry]
name = "mcp-skeleton"
version = "0.1.0"
description = "MCP Skeleton - Production-ready template for building Model Context Protocol servers with FastMCP"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
keywords = [
    "mcp",
    "model-context-protocol",
    "fastmcp",
    "template",
    "skeleton",
    "server",
    "kubernetes",
    "docker",
    "enterprise"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [
    { include = "tools" },
    { include = "utilities" },
]

[tool.poetry.dependencies]
python = "^3.10"
fastmcp = "^0.2.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.9.1"
httpx = ">=0.27"
python-dotenv = "^1.0.0"
uvicorn = ">=0.31.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^24.0.0"
ruff = "^0.1.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
mcp-skeleton = "mcp_server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
